--- a/normal.css
+++ b/normal.css
@@ -10,7 +10,7 @@ body{
 .navbar{
     display: grid;
     grid-template-columns:0px 2fr 0.65fr 1fr 0.8fr 0.6fr 1fr 0.3fr 1.5fr;    
-    padding-top: 2.31vw;
+    padding-top: 3%;
 }
 .now{
     color: #C91DBE;
