--- a/normal.css
+++ b/normal.css
@@ -37,10 +37,10 @@ nav>div>div>a>img{
     /* border: 1px solid white; */
     /* display: inline-block;  */
     border-radius:10%;
-    padding: 0.5712vw 1.4vw 0.5712vw 1.4vw;
+    padding: 0.25vw 1.4vw 0.25vw 1.4vw;
     position: relative;
     right: 1.4vw;
-    /* bottom: 0.0712vw; */
+    bottom: 0.01vw;
     text-align: center;
     border-radius: 35% / 100%;
 
@@ -92,7 +92,7 @@ footer{
     position: relative;
     margin-top:20%;
     transform: scaleX(100%);
-    
+    /* height: 19%; */
     /* height: 10vw; */
     font-family: 'Inter';
     
